Adjust responsiveness and correct code in some places

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,4 +14,12 @@ html {
 .anton {
   font-family: var(--font-anton), sans-serif;
 }
+.custom-scroll::-webkit-scrollbar {
+  display: none;
+}
+.custom-scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 
