Some changes and updation in profile Page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,5 +21,13 @@ html {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+/* Add to globals.css */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
 
